crates/core/tests/snapshots/field_merge_test__field_merge__unnamed_struct__supports_nested.snap
---
source: crates/core/tests/field_merge_test.rs
expression: pretty(container.impl_partial_merge())
---
fn merge(
    &mut self,
    context: &Self::Context,
    mut next: Self,
) -> std::result::Result<(), schematic::ConfigError> {
    use schematic::internal::*;
    MergeManager::new(context)
        .nested(&mut self.0, next.0)?
        .nested(&mut self.1, next.1)?
        .nested(&mut self.2, next.2)?
        .nested(&mut self.3, next.3)?;
    Ok(())
}
